@@ -1,5 +1,7 @@
 //it's lazy updated file, so the real ChangeLog is the activity on github
 
++ Functions - Analysis - UNITAZ sorting length
++ Functions - Filter - Filter by repetitions
 + Functions - Sort - Sort by length
 
 + os2:: single application mode
